# oss-rust-sdk

./: .gitignore  Cargo.toml  ChangeLog.md  Makefile.toml  Readme.md
example/: .gitignore  Cargo.toml
example/src/: main.rs
src/: async_object.rs  async_service.rs  auth.rs  error.rs  errors.rs  lib.rs  multi_part.rs  object.rs  oss.rs  prelude.rs  service.rs  utils.rs
