[package]
name = "oss-rust-sdk"
version = "0.2.1"
authors = ["NoXF <xianyou.cyq@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Aliyun OSS SDK"
license = "Apache-2.0"
repository = "https://github.com/NoXF/oss-rust-sdk"

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking"] }
base64 = "0.12.1"
chrono = "0.4"
rust-crypto = "^0.2"
log = "0.4.6"
quick-xml = "0.18.1"
derive_more = "0.99.5"
bytes = "1.0"

[dev-dependencies]
tokio = { version = "1.1", features = ["full"] }
