[package]
name = "oss-rust-sdk"
version = "0.9.1"
authors = ["NoXF <xianyou.cyq@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "Aliyun OSS SDK"
license = "Apache-2.0"
repository = "https://github.com/NoXF/oss-rust-sdk"

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking"], default-features = false, optional = true }
base64 = "0.13"
chrono = "0.4.20"
log = "0.4.17"
quick-xml = { version = "0.28.0", features = ["serialize"] }
derive_more = "0.99.5"
bytes = "1.0"
async-trait = "0.1.53"
httpdate = "1.0.2"
hmac = "0.12"
sha1 = "0.10"
serde = { version = "1.0.156", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.1", features = ["full"] }

[features]
default = [ "native-tls" ]
native-tls = [ "reqwest/default-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
