[package]
name = "example"
version = "0.1.0"
authors = ["神龙 <baolong.mbl@alibaba-inc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
oss-rust-sdk = { path = "../" }
tokio-core = "0.1.17"
reqwest = "0.9"
futures = "0.1"
